--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   twitter: ssehyup # twitter username
   facebook: facebook_username # facebook username
   email: tpguq1104@naver.com # email adress
-  avatar: /assets/img/avatar.jpg # change with your own avatar
+  avatar: /assets/img/avatar.png # change with your own avatar
 
 # URL settings
 url: "https://github.com/Epheria/project-arca-blog" #
