--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Studio MM Dev Blog # site title
 description: >- # site description
   We are developing games.
-lang: en-US # default lang
+lang: ko-KR # default lang
 timezone: Asia/Seoul # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
 repo: https://github.com/Epheria/project-arca-blog # site repo [optional]
