--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -14,6 +14,10 @@
   url: /art/
   external: false
 
+- title: Sound Works
+  url: /sound/
+  external: false
+
 - title: About
   url: /about/
   external: false # set true if you using external link, see below
